--- a/service_server/Dockerfile
+++ b/service_server/Dockerfile
@@ -9,3 +9,4 @@ COPY service_server.py /catkin_ws/src/master_pkg/src/service_server.py
 
 ADD  run_service_server.sh run_service_server.sh
 CMD ./run_service_server.sh
+CMD python /catkin_ws/src/master_pkg/src/service_server.py
