--- a/rosbasic/Dockerfile
+++ b/rosbasic/Dockerfile
@@ -11,15 +11,15 @@ RUN apt-get install -y ros-melodic-rqt-graph
 RUN apt-get install -y ros-melodic-rqt-common-plugins
 
 # Setup base catkin environment
-RUN echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> ~/.bashrc
-RUN mkdir /catkin_ws
-RUN mkdir /catkin_ws/src
+RUN echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> ~/.profile
+RUN mkdir /catkin_ws && mkdir /catkin_ws/src
+# RUN mkdir /catkin_ws/src
 WORKDIR /catkin_ws
 RUN . /opt/ros/$ROS_DISTRO/setup.sh && catkin_make
 
 # Initialize environment
 RUN chmod +x /catkin_ws/devel/setup.sh
-RUN echo "source /catkin_ws/devel/setup.bash" >> ~/.bashrc
+RUN echo "source /catkin_ws/devel/setup.bash" >> ~/.profile
 # RUN . /catkin_ws/devel/setup.sh ## in-lined with catkin_create_pkg
 
 # Create custom messages package
@@ -66,6 +66,7 @@ WORKDIR /catkin_ws/src
 
 # added custom_messages_pkg
 RUN . /catkin_ws/devel/setup.sh && catkin_create_pkg master_pkg rospy std_msgs custom_messages_pkg
+# RUN echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> ~/.bashrc
 
 # You don't need to do this since you are creating the package
 # with the custom_messages_pkg.  ROS instserts to library during the setup
