--- a/service_server/Dockerfile
+++ b/service_server/Dockerfile
@@ -8,4 +8,4 @@ FROM rosbasic
 COPY service_server.py /catkin_ws/src/master_pkg/src/service_server.py
 
 ADD  run_service_server.sh run_service_server.sh
-CMD bash -c './run_service_server.sh'
+CMD ./run_service_server.sh
