--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,19 +1,21 @@
 # web server container
-FROM chunliu/docker-opencv
+# FROM chunliu/docker-opencv
+FROM openhorizon/mjpg-streamer-pi3
+
 
 MAINTAINER Chun Liu <https://github.com/chunliu>
 LABEL Description="A Docker image for mjpg_streamer." Version="0.3"
 
 # Build mjpg_streamer
 # Need to run container with the device: docker run -t -i -p 8080:8080/tcp --device=/dev/video0 image:tag
-# RUN git clone https://github.com/jacksonliam/mjpg-streamer.git 
+RUN git clone https://github.com/jacksonliam/mjpg-streamer.git 
 
-# WORKDIR /mjpg-streamer/mjpg-streamer-experimental
+WORKDIR /mjpg-streamer/mjpg-streamer-experimental
 
-# RUN make \ 
-#    && make install
+RUN make \ 
+   && make install
 
 EXPOSE 8080/TCP
 
-# ADD  run.sh run.sh
-# CMD ./run.sh
+ADD  run.sh run.sh
+CMD ./run.sh
