--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -2,9 +2,8 @@
 # FROM chunliu/docker-opencv
 FROM openhorizon/mjpg-streamer-pi3
 
-
-MAINTAINER Chun Liu <https://github.com/chunliu>
-LABEL Description="A Docker image for mjpg_streamer." Version="0.3"
+# Install GIT
+RUN apt-get -y install git
 
 # Build mjpg_streamer
 # Need to run container with the device: docker run -t -i -p 8080:8080/tcp --device=/dev/video0 image:tag
