--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -12,7 +12,7 @@ RUN git clone https://github.com/jacksonliam/mjpg-streamer.git
 
 WORKDIR /mjpg-streamer/mjpg-streamer-experimental
 
-RUN make && make install
+RUN make && make install && chmod +x docker-start.sh
 
 EXPOSE 8080/TCP
 
