--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -10,9 +10,9 @@ RUN apt-get -y install
 
 # Install OpenCV
 RUN apt-get install -y build-essential git cmake pkg-config gcc g++
-RUN apt-get install -y libtiff5-dev libjpeg8-dev libpng12-dev
+RUN apt-get install -y libjpeg-dev libpng-dev libtiff-dev libtiff5-dev libjpeg8-dev libpng12-dev
 RUN apt-get install -y libgtk2.0-dev pkg-config
-RUN apt-get install -y python-dev python-numpy libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev
+RUN apt-get install -y python-dev python-numpy libtbb2 libtbb-dev libjasper-dev
 RUN apt-get install -y libavcodec-dev libavformat-dev libswscale-dev libv4l-dev libdc1394-22-devinstal
 RUN apt-get install -y libxvidcore-dev libx264-dev
 RUN apt-get install -y libatlas-base-dev gfortran
