--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -3,16 +3,13 @@
 # FROM openhorizon/mjpg-streamer-pi3
 FROM raspbian/jessie
 
-# Install GIT
+# Install Basics
 RUN apt-get update
-RUN apt-get -y install  
-
+RUN apt-get install -y build-essential git cmake pkg-config gcc g++ unzip
+RUN apt-get install -y man-db
 
 # Install OpenCV
-RUN apt-get install -y build-essential git cmake pkg-config gcc g++ unzip
-RUN apt-get install -y libgtk2.0-dev pkg-config libavcodec-dev 
-RUN apt-get install -y man-db
-RUN apt-get install -y libavformat-dev libswscale-dev
+RUN apt-get install -y libgtk2.0-dev pkg-config libavcodec-dev libavformat-dev libswscale-dev
 RUN apt-get install -y python-dev python-numpy libtbb2 libtbb-dev libjpeg-dev libpng-dev libtiff-dev libjasper-dev libdc1394-22-dev
 
 # RUN apt-get install -y libjpeg62-turbo-dev libjpeg-dev libpng-dev libtiff-dev libtiff5-dev libjpeg8-dev libpng12-dev
