--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -5,10 +5,31 @@ FROM raspbian/jessie
 
 # Install Dependencies and Utilities
 RUN apt-get update
-RUN apt-get install -y anaconda
-RUN conda install opencv
-
-
+RUN apt-get install -y \ 
+    wget \
+    build-essential \ 
+    cmake \ 
+    git \
+    unzip \ 
+    pkg-config \
+    python-dev \ 
+    python-opencv \ 
+    libopencv-dev \ 
+#    libav-tools  \ 
+    libjpeg-dev \ 
+    libpng-dev \ 
+    libtiff-dev \ 
+    libjasper-dev \ 
+    libgtk2.0-dev \ 
+    python-numpy \ 
+    python-pycurl \ 
+    libatlas-base-dev \
+    gfortran \
+    webp \ 
+    python-opencv \ 
+    qt5-default \
+    libvtk6-dev \ 
+    zlib1g-dev 
 
 # Install Additional Utilities
 RUN apt-get install -y nano iputils-ping
