--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,26 +1,19 @@
-# web server container
-# FROM chunliu/docker-opencv
-# FROM openhorizon/mjpg-streamer-pi3
+
+# webserver
+
+# Need to run container with the device: docker run -t -i -p 8080:8080/tcp --device=/dev/video0 image:tag
+# The stream can be viewed: http://pidev2.local:8080/?action=stream
+# http://pidev2.local:8080 shows various html options
+
 FROM raspbian/jessie
 
 # Install Dependencies and Utilities
 RUN apt-get update
-
-# Install Additional Utilities
 RUN apt-get install -y git nano iputils-ping make cmake libjpeg8-dev gcc g++
 RUN apt-get install -y libraspberrypi-dev
 
-
 # Build mjpg_streamer
-# Need to run container with the device: docker run -t -i -p 8080:8080/tcp --device=/dev/video0 image:tag
 RUN git clone https://github.com/jacksonliam/mjpg-streamer.git 
-
-
-WORKDIR /mjpg-streamer/mjpg-streamer-experimental
-
-RUN mkdir _build
-WORKDIR /mjpg-streamer/mjpg-streamer-experimental/_build
-
 WORKDIR /mjpg-streamer/mjpg-streamer-experimental
 RUN make && make install && chmod +x docker-start.sh
 
@@ -28,7 +21,3 @@ EXPOSE 8080/TCP
 
 ENTRYPOINT ["/mjpg-streamer/mjpg-streamer-experimental/docker-start.sh", "output_http.so -w ./www"]
 CMD ["input_raspicam.so"]
-# CMD ["/mjpg-streamer/mjpg-streamer-experimental/docker-start.sh", "output_http.so -w ./www", "input_raspicam.so"]
-
-# ADD  run.sh run.sh
-# CMD ./run.sh
