--- a/picam/Dockerfile
+++ b/picam/Dockerfile
@@ -19,7 +19,7 @@ RUN apt-get install -y python python-pip
 RUN mkdir /requirements
 WORKDIR /requirements
 COPY ./requirements.txt requirements.txt
-RUN pip install requirements.txt
+RUN pip install --no-cache -r requirements.txt
 
 # Copy container specific files and run
 COPY picam.py /catkin_ws/src/master_pkg/src/picam.py
