--- a/picam/Dockerfile
+++ b/picam/Dockerfile
@@ -17,14 +17,15 @@ RUN apt-get update
 RUN apt-get install -y nano iputils-ping
 RUN apt-get install -y python python-pip
 RUN apt-get install -y python-opencv
-RUN mkdir /requirements
-WORKDIR /requirements
-COPY ./requirements.txt requirements.txt
-RUN pip install --no-cache -r requirements.txt
+RUN mkdir ~/requirements
+WORKDIR ~/requirements
+COPY requirements.txt requirements.txt
+RUN pip install --no-cache -r ~/requirements.txt
 
 
 # Copy container specific files and run
 COPY picam.py /catkin_ws/src/master_pkg/src/picam.py
 
+WORKDIR ~
 COPY  run.sh /run.sh
 CMD ./run.sh
