--- a/picam/Dockerfile
+++ b/picam/Dockerfile
@@ -18,6 +18,7 @@ RUN apt-get install -y nano iputils-ping
 RUN apt-get install -y python python-pip
 RUN apt-get install -y python-opencv
 RUN mkdir ~/requirements
+RUN pwd
 WORKDIR ~/requirements
 COPY requirements.txt requirements.txt
 RUN pip install --no-cache -r ~/requirements.txt
