--- a/raspbian-ros/Dockerfile
+++ b/raspbian-ros/Dockerfile
@@ -11,7 +11,8 @@ FROM raspbian/jessie
 
 RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu jessie main" > /etc/apt/sources.list.d/ros-latest.list'
 
-RUN apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116
+RUN apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-keys 421C365BD9FF1F717815A3895523BAEEB01FA116 F42ED6FBAB17C654
+
 
 RUN apt-get update
 RUN apt-get upgrade
