added raspian ros stretch image

--- a/raspbian-ros/Dockerfile
+++ b/raspbian-ros/Dockerfile
@@ -59,7 +59,7 @@ RUN apt-get install -y iputils-ping
 
 # Setup base catkin environment
 RUN echo "source /opt/ros/$ROS_DISTRO/setup.bash" >> ~/.bashrc
-RUN mkdir /catkin_ws/src
+# RUN mkdir /catkin_ws/src
 WORKDIR /catkin_ws
 RUN . /opt/ros/$ROS_DISTRO/setup.sh && catkin_make
 
