added raspian ros stretch image

--- a/raspbian-ros/Dockerfile
+++ b/raspbian-ros/Dockerfile
@@ -45,6 +45,9 @@ RUN rm -r $ROS_VERSION-ros_comm-wet.rosinstall
 # Install Dependencies
 RUN rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_VERSION -r --os=debian:$DEBIAN_VERSION
 
+# build catkin workspace
+sudo ./src/catkin/bin/catkin_make_isolated --install -DCMAKE_BUILD_TYPE=Release --install-space /opt/ros/$ROS_VERSION
+
 ### END OF WEB PAGE INSTRUCTIONS
 
 
