--- a/raspbian-ros/Dockerfile
+++ b/raspbian-ros/Dockerfile
@@ -47,7 +47,7 @@ RUN mkdir -p /catkin_ws/external_src
 WORKDIR /catkin_ws/external_src
 RUN wget http://sourceforge.net/projects/assimp/files/assimp-3.1/assimp-3.1.1_no_test_models.zip/download -O assimp-3.1.1_no_test_models.zip
 RUN unzip assimp-3.1.1_no_test_models.zip
-WORKSPACE assimp-3.1.1
+WORKDIR assimp-3.1.1
 RUN cmake .
 RUN make
 RUN make install
